--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </nav>
     </header>
     <main>
-      <section class="hero">
+      <section class="main-hero">
         <div class="container">
           <article >
             <h1>I'm David</h1>
