--- a/index.html
+++ b/index.html
@@ -447,8 +447,7 @@
                 </article>
               </div>
             </div> <!--Internship website-->
-            <div class="row row-cols-1 row-cols-lg-2 flex-row-reverse flex-lg-row">
-           
+            <div class="row flex-column-reverse flex-lg-row ">
               <div class="col">
                 <article>
                   <h1>Jaam House of sushi</h1>
@@ -537,7 +536,7 @@
       </a>
     </div>
     <div class="scrollWatcher">
-      
+
     </div>
     <!-- Bootstrap JavaScript Libraries -->
     <script
