--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="container">
           <article>
             <h1>I'm David</h1>
-            <h2>Web developer</h2>
+            <h2>Web developer/Freelance</h2>
             <p>
               Fresh graduate in information technology with experience in
               front-end web development during internship and freelancing. Now
