--- a/index.html
+++ b/index.html
@@ -98,12 +98,6 @@
           <article>
             <h1>I'm David</h1>
             <h2>Web developer</h2>
-            <p>
-              Fresh graduate in information technology with experience in
-              front-end web development during internship and freelancing. Now
-              seeking an entry-level position as a front-end web developer or
-              any IT related role.
-            </p>
             <div class="links">
               <a
                 href="https://www.facebook.com/profile.php?id=100073377254030"
@@ -161,7 +155,7 @@
           
         </div>
         <div class="box1"></div>
-        <div class="box2"></div>
+ 
         <div class="custom-shape-divider-bottom-1705003094">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
               <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
@@ -486,9 +480,9 @@
             <div class="row flex-column-reverse flex-lg-row ">
               <div class="col">
                 <article>
-                  <h1>Jaam House of sushi</h1>
+                  <h1>JAAM House of sushi</h1>
                   <h2>Nov 2023 - Dec 2023</h2>
-                  <p>Jaam house of sushi is a restourant that is located in the Philippines. It offers multiple varieties japanese food that you will crave for it. The current content of the website only contains the franchasing details of the business.</p>
+                  <p>JAAM house of sushi is a japanese restaurant that is located in the Philippines. It offers multiple varieties japanese food that you will crave for! The current branches are located in Metro Manila, Pampanga, and lastly, Cavite. Visit the website for more information</p>
                   <a href="https://jaamhouseofsushi.com/" class="btn" target="_blank">Visit Website</a>
                 </article>
               </div>
