--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <article>
                   <h1>JAAM House of sushi</h1>
                   <h2>Nov 2023 - Dec 2023</h2>
-                  <p>JAAM house of sushi is a japanese restaurant that is located in the Philippines. It offers multiple varieties japanese food that you will crave for! The current branches are located in Metro Manila, Pampanga, and lastly, Cavite. Visit the website for more information</p>
+                  <p>JAAM house of sushi is a japanese restaurant that is located in the Philippines. It offers multiple varieties japanese food that you will crave for! The current branches are located in Metro Manila, and Pampanga. Visit the website for more information</p>
                   <a href="https://jaamhouseofsushi.com/" class="btn" target="_blank">Visit Website</a>
                 </article>
               </div>
