--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <article>
             <h1>I'm David</h1>
             <h2>Web developer</h2>
+            <p>Fresh graduate in information technology with experience in front-end web development during internship and freelancing. Now seeking an entry-level position as a front-end web developer or any IT related role.</p>
             <div class="links">
               <a
                 href="https://www.facebook.com/profile.php?id=100073377254030"
