update about me description

--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
             <article>
               <h1>About Me</h1>
               <p>
-                Right now i am freelancing as a web developer focusing in
-                front-end developing (if i have to do back-end, i use PHP and
-                sql).
+                A <span class="fw-bold text-uppercase">Webmaster</spans> and aspiring <span class="fw-bold text-uppercase">Web Developer!</spans> 
               </p>
               <p>
                 I took my bachelor's degree from Pamantasan ng Lungsod ng Pasig
